[workspace]

members = [
    "lib",
    "daemon",
    "check",
    "rootshell",
    "telcom-parser",
    "installer",
    "installer-gui/src-tauri",
    "test",
]
# at least for now, let's keep installer-gui out of the list of default
# packages. installer-gui is still experimental and requires many new packages
# both from cargo and the underlying operating system
default-members = [
    "lib",
    "daemon",
    "check",
    "rootshell",
    "telcom-parser",
    "installer",
]
resolver = "2"
