[package]
name = "rayhunter-check"
version = "0.10.2"
edition = "2024"

[dependencies]
rayhunter = { path = "../lib" }
futures = { version = "0.3.32", default-features = false }
log = "0.4.20"
tokio = { version = "1.50.0", default-features = false, features = ["fs", "signal", "process", "rt-multi-thread"] }
pcap-file-tokio = "0.1.0"
clap = { version = "4.5.60", features = ["derive"] }
walkdir = "2.5.0"
