[package]
name = "rayhunter-daemon"
version = "0.10.2"
edition = "2024"
rust-version = "1.88.0"

[lib]
name = "rayhunter_daemon"
path = "src/lib.rs"

[[bin]]
name = "gen_api"
path = "src/bin/gen_api.rs"
required-features = ["apidocs"]

[features]
default = ["rustcrypto-tls"]
rustcrypto-tls = ["reqwest/rustls-tls-webpki-roots-no-provider", "dep:rustls-rustcrypto"]
ring-tls = ["reqwest/rustls-tls-webpki-roots"]
apidocs = ["dep:utoipa"]

[dependencies]
rayhunter = { path = "../lib" }
toml = "0.9.5"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.50.0", default-features = false, features = ["fs", "signal", "process", "rt"] }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json"] }
thiserror = "2.0.12"
libc = "0.2.185"
log = "0.4.20"
tokio-util = { version = "0.7.18", features = ["rt", "io", "compat"] }
futures-macro = "0.3.30"
include_dir = "0.7.3"
chrono = { version = "0.4.44", features = ["serde"] }
tokio-stream = { version = "0.1.18", default-features = false, features = ["io-util"] }
futures = { version = "0.3.32", default-features = false }
serde_json = "1.0.149"
image = { version =  "0.25.10", default-features = false, features = ["png", "gif"] }
tempfile = "3.23.0"
async_zip = { version = "0.0.18", features = ["tokio"] }
anyhow = "1.0.102"
reqwest = { version = "0.12.20", default-features = false }
rustls-rustcrypto = { version = "0.0.2-alpha", optional = true }
async-trait = "0.1.89"
utoipa = { version = "5.4.0", optional = true }
