[package]
name = "rayhunter-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
rayhunter = { path = "../lib" }
iced = { version = "0.10", features = ["canvas", "debug", "tokio", "svg"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.114"
chrono = { version = "0.4.31", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
thiserror = "1.0.52"
log = "0.4.20"
env_logger = "0.10.1"
bytesize = "1.3"
dirs = "5.0"

# Optional dependencies for direct daemon integration
# Uncomment later when integrating directly with daemon
# tokio-util = { version = "0.7.10", features = ["rt"] }
# futures = "0.3.30"

[[bin]]
name = "rayhunter-ui"
path = "src/main.rs"