[package]
name = "installer"
version = "0.10.1"
edition = "2024"

[lib]
name = "installer"
crate-type = ["rlib"]

[[bin]]
name = "installer"
path = "src/main.rs"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.98"
axum = { version = "0.8.3", features = ["http1", "tokio"], default-features = false }
base64_light = "0.1.5"
block-padding = "0.3.3"
bytes = "1.11.1"
clap = { version = "4.5.37", features = ["derive"] }
env_logger = "0.11.8"
hyper = "1.6.0"
hyper-util = "0.1.11"
md5 = "0.7.0"
md5crypt = "1.0.0"
nusb = "0.1.13"
reqwest = { version = "0.12.15", features = ["json"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.44.2", features = ["io-util", "macros", "rt"], default-features = false }
tokio-retry2 = "0.5.7"
tokio-stream = "0.1.17"
futures = "0.3"

[target.'cfg(unix)'.dependencies]
termios = "0.3"

[target.'cfg(all(target_os = "linux", not(target_os = "android")))'.dependencies.adb_client]
git = "https://github.com/EFForg/adb_client.git"
rev = "e511662394e4fa32865c154c40f81a3d846f700c"
default-features = false
features = ["trans-nusb"]

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies.adb_client]
git = "https://github.com/EFForg/adb_client.git"
rev = "e511662394e4fa32865c154c40f81a3d846f700c"
default-features = false
features = ["trans-libusb"]
