[package]
name = "installer"
version = "0.10.2"
edition = "2024"

[lib]
name = "installer"
crate-type = ["rlib"]

[[bin]]
name = "installer"
path = "src/main.rs"

[dependencies]
aes = "0.9.0"
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["http1", "tokio"], default-features = false }
base64_light = "0.1.6"
block-padding = "0.4.2"
bytes = "1.11.1"
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.10"
hyper = "1.9.0"
hyper-util = "0.1.20"
md5 = "0.8.0"
md5crypt = "1.0.0"
nusb = "0.2.3"
reqwest = { version = "0.12.15", features = ["json"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.11.0"
tokio = { version = "1.50.0", features = ["io-util", "io-std", "macros", "rt"], default-features = false }
tokio-retry2 = "0.9.1"
tokio-stream = "0.1.18"
futures = "0.3"

[target.'cfg(unix)'.dependencies]
termios = "0.3"

[target.'cfg(all(target_os = "linux", not(target_os = "android")))'.dependencies.adb_client]
git = "https://github.com/EFForg/adb_client.git"
rev = "e511662394e4fa32865c154c40f81a3d846f700c"
default-features = false
features = ["trans-nusb"]

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies.adb_client]
git = "https://github.com/EFForg/adb_client.git"
rev = "e511662394e4fa32865c154c40f81a3d846f700c"
default-features = false
features = ["trans-libusb"]
