[package]
name = "rayhunter"
version = "0.3.3"
edition = "2021"
description = "Realtime cellular data decoding and analysis for IMSI catcher detection"


[lib]
name = "rayhunter"
path = "src/lib.rs"

[features]
default = []
orbic = []
tplink = []

[dependencies]
bytes = "1.5.0"
chrono = "0.4.31"
crc = "3.0.1"
deku = { version = "0.18.0", features = ["logging"] }
libc = "0.2.150"
log = "0.4.20"
nix = { version = "0.29.0", features = ["feature"] }
pcap-file-tokio = "0.1.0"
thiserror = "1.0.50"
telcom-parser = { path = "../telcom-parser" }
tokio = { version = "1.44.2", default-features = false }
futures = { version = "0.3.30", default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
