[package]
name = "rayhunter"
version = "0.10.2"
edition = "2024"
description = "Realtime cellular data decoding and analysis for IMSI catcher detection"

[lib]
name = "rayhunter"
path = "src/lib.rs"

[features]
apidocs = ["dep:utoipa"]

[dependencies]
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
crc = "3.4.0"
deku = { version = "0.20.3", features = ["logging"] }
libc = "0.2.185"
log = "0.4.20"
env_logger = { version = "0.11", default-features = false }
nix = { version = "0.30.1", features = ["feature"] }
pcap-file-tokio = "0.1.0"
pycrate-rs = { git = "https://github.com/EFForg/pycrate-rs" }
thiserror = "2.0.12"
telcom-parser = { path = "../telcom-parser" }
tokio = { version = "1.50.0", default-features = false, features = ["time", "rt", "macros", "fs"] }
futures = { version = "0.3.32", default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
num_enum = "0.7.6"
utoipa = { version = "5.4.0", optional = true }

[dev-dependencies]
