[package]
name = "rayhunter-test"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rayhunter-test"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libtest-mimic = "0.8"
reqwest = { version = "0.12", features = ["json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "net", "process"] }
